kv/RocksDBStore: use unique_ptr for destroying cf

to avoid leak in ColumnFamilySet

Fixes: https://tracker.ceph.com/issues/46054
Signed-off-by: Kefu Chai <kchai@redhat.com>